robots.txt added._includes/fonts.html added.

--- a/_posts/2018-5-9-“最先进光刻机对中国禁售”是一个谎言.md
+++ b/_posts/2018-5-9-“最先进光刻机对中国禁售”是一个谎言.md
@@ -3,7 +3,7 @@ layout: post
 title: “最先进光刻机对中国禁售”是一个谎言
 date: 2018-05-09 
 comments: true
-tags: [ 中国 , 媒体 , 半岛电视台]
+tags: [ 中国 , 产业]
 ---
 中兴被美国封杀十多天了，又有传言华为也在被美国调查。中兴被美国封杀最大的影响是芯片，在此时机，网络上那个“最先进光刻机对中国禁售”的传言又盛行起来。这里回顾下半导体制造产业界的一段精彩历史，数几个风流人物，看能不能终结这个捕风捉影的传言。
 
