--- a/_posts/2018-4-30-美国的中年人.md
+++ b/_posts/2018-4-30-美国的中年人.md
@@ -1,12 +1,9 @@
 ---
 layout: post
-title: "美国的中年人"
+title: "万维钢 : 美国的中年人"
 tags: [ 美国 , 文化 , 中年 ]
 comments: true
 ---
-
-#### 作者：万维钢
-
 最近中美两国发生了一系列的贸易纠纷，特别是中兴公司被美国商务部制裁，引起我们的很多思考。从国家竞争的角度，美国是中国的对手，我们肯定要自立自强。从另一方面来说，我看这些事件也给崛起中的中国人提了一个醒。
 
 美国，是不是还有很多值得我们学习的地方。
