--- a/_posts/2018-4-30-这个国家是这么帮人们创业的.md
+++ b/_posts/2018-4-30-这个国家是这么帮人们创业的.md
@@ -1,11 +1,9 @@
 ---
 layout: post
-title: "这个国家是这么帮人们创业的"
+title: "张弓 : 这个国家是这么帮人们创业的"
 tags: [ 丹麦 , 创业]
 comments: true
 ---
-#### 作者: 张弓
-
 也许很多人和我来丹麦前一样，都相信西方发达国家的富裕源于一些教科书或论坛里提到的说法。比如九十年代我们说他们‌‌“掠夺‌‌”、‌‌“吸血‌‌”，两千年说他们‌‌“垄断‌‌”、‌‌“专利‌‌”，现在又有些说法认为他们纯粹是‌‌“人少‌‌”、‌‌“卖资源‌‌”——从这些理论的进化里倒也能看出我国人民增长的自信和幽默感。然而在丹麦生活了几年，再加上工作需要像研究标本一样研究公司，于是我发现，上述那些原因可能都只覆盖了现实的很小一点儿。
 
 所以这篇文章算是写给那些对丹麦经济为什么发达感到好奇，并且对未知事物不仅仅存在批判眼光的朋友。由于这个话题太大，我决定先找一个小处下笔，于是创业这个领域自然成了首选。我对在丹麦创业比较熟悉，并不是因为有这方面的倾向，而是因为跟着老板做过不少并购与合作的调查，但受到预算限制，这些调查的目标基本都是小公司。同时我负责产品上市，丹麦公司在寻找先期客户时也喜欢和临近的小公司合作，道理和用小白鼠试药差不多，虽然当面我从不这样讲。
