--- a/_posts/2018-5-24-中国共产党隐秘的影响力机​​器.md
+++ b/_posts/2018-5-24-中国共产党隐秘的影响力机​​器.md
@@ -1,11 +1,9 @@
 ---
 layout: post
-title: "中国共产党隐秘的影响力机​​器"
+title: "练乙铮 ：中国共产党隐秘的影响力机​​器"
 tags: [ 中国 , 政治]
 comments: true
 ---
-作者：练乙铮
-
 在俄罗斯试图秘密操纵2016年美国总统大选的种种喧闹之中，有个国家静得出奇：中国。但中国的领导人很可能正看着俄罗斯的粗劣手法冷笑。既然这个由莫斯科策划的计谋主要依赖于美国的社交媒体，必然很快会被美国的技术人员识破。同样，前俄罗斯间谍及其女儿在英国被公然下毒的事件，也已经被记在莫斯科头上。这些过于直接、过于有迹可循的行动，只会引来反击。
 
 中国也有欺凌弱小的时候，尤其是对那些处在它影响范围内的亚洲国家——对部署了防御性导弹的韩国实施经济制裁，暗地里到香港和泰国绑架书商。但中国往往不会公开伤害或惹恼如美国这样的对手，相反，它会安静地积攒长期的优势。
