node unblockerml added.'隐瞒真相，对内失信于民，对外失信于全世界'added.

--- a/_posts/2018-6-29-维稳网军是怎样炼成的.md
+++ b/_posts/2018-6-29-维稳网军是怎样炼成的.md
@@ -4,8 +4,6 @@ title: "《苹果日报》：维稳网军是怎样炼成的"
 tags: [ 中国 , 政治, 维稳 ]
 comments: true
 ---
-作者：吕月
-
 “稳定压倒一切”是邓小平理论的重要组成部份，江泽民、胡锦涛都是坚定的执行者。胡锦涛执政十年中，连续发生数起数千退伍军官包围总政和军委事件，侦察发现各省市退伍军官是用电脑联络的，当时引发高层的震惊。胡锦涛在全国维稳工作会议上提出：要严密防止社会维权组织的出现，要“露头就打”。
 
 随着互联网在中国的普遍使用，由前中国邮电大学校长方滨兴带领设计的“防火长城”虽然越盖越厚越高，2013年8月19日，习近平在全国宣传工作会议上竟然将互联网称之为“党之大患、国之大患、亡党亡国”，这是对互联网最严厉的批评。随着一片“亮剑”之声，全国除了抓“网络谣言制造者”，还封杀了40几名网络大V，当时只是针对微博而言。而现在随智能手机的普及，中国网民，微信、微博使用者，高达7.5亿人，早已对网络封杀、删帖、封群，对层出不穷的因发微信被抓、被判刑的事件，深恶痛绝。
@@ -30,4 +28,6 @@ comments: true
 
 舆论维稳与网络写手，成为中共不可或缺的维护社会稳定的力量，其中包括一批著名院长、教授和学者。至于网络上专事谩骂造谣的“五毛”，则属于维稳课程不及格的水军。
 
-##### Source:[https://hk.news.appledaily.com/local/daily/article/20180627/20432718](https://hk.news.appledaily.com/local/daily/article/20180627/20432718)
+作者：吕月
+
+##### Source:[苹果日报](https://hk.news.appledaily.com/local/daily/article/20180627/20432718)
