--- a/_posts/2018-5-15-批判性思维扫盲：学会区分“事实”与“观点”.md
+++ b/_posts/2018-5-15-批判性思维扫盲：学会区分“事实”与“观点”.md
@@ -1,82 +1,76 @@
 ---
-layout: default
-published: false
+layout: post
 title: 批判性思维扫盲：学会区分“事实”与“观点”
+date: 2013-05-02
+comments: true
+tags: [ 思维方式 ]
 ---
+> 引子: 
+近期发了两篇博文《每周转载：关于雅安地震的种种乱象》《为了地震灾民——多些“监督问责”，少些“煽情感动”》，引来不少读者留言。某些网友甚至在博客留言中吵了起来。据俺观察，有些参与口水战的网友，不善于区分“事实陈述”和“观点陈述”。而区分这两者的能力，恰恰是批判性思维的基本功之一。所以，今天花点时间，扫盲一下这个话题。
 
-### 批判性思维扫盲：学会区分“事实”与“观点”
+### 为啥要区分“观点陈述”和“事实陈述”？
 
-##### 引子
+批判性思维的其中一个要点是：你对外来的信息不能照单全收，要经过自己的【独立】思考，要经过一定的质疑。
 
-　　近期发了两篇博文《每周转载：关于雅安地震的种种乱象》《为了地震灾民——多些“监督问责”，少些“煽情感动”》，引来不少读者留言。某些网友甚至在博客留言中吵了起来。据俺观察，有些参与口水战的网友，不善于区分“事实陈述”和“观点陈述”。而区分这两者的能力，恰恰是批判性思维的基本功之一。所以，今天花点时间，扫盲一下这个话题。
+但是质疑的方式，会因对象而异。不同的信息，你必须采取不同的质疑方式。甚至有些信息（比如某些“观点陈述”），你是无需质疑的（后面会介绍为啥）。
 
+但如果连“观点”和“事实”都经常搞混淆，又如何能进行正确的质疑呢？所以，区分“观点陈述”和“事实陈述”非常重要。
 
-##### 为啥要区分“观点陈述”和“事实陈述”？
+### 啥是“事实陈述”？
 
-　　批判性思维的其中一个要点是：你对外来的信息不能照单全收，要经过自己的【独立】思考，要经过一定的质疑。
+顾名思义，“事实陈述”就是把客观事实说出来。
 
-　　但是质疑的方式，会因对象而异。不同的信息，你必须采取不同的质疑方式。甚至有些信息（比如某些“观点陈述”），你是无需质疑的（后面会介绍为啥）。
+比如——俺这个博客是2009年1月份开张的——这就是一个事实陈述。
 
-　　但如果连“观点”和“事实”都经常搞混淆，又如何能进行正确的质疑呢？所以，区分“观点陈述”和“事实陈述”非常重要。
+那么，什么才算“事实”捏？关键看它是不是具有【客观性】。不具有客观性的东西，不能算“事实”。
 
+### "事实陈述"有啥特征？
 
-##### 啥是“事实陈述”？
+* **无“对错”、无“好坏”**
 
-　　顾名思义，“事实陈述”就是把客观事实说出来。
+前面说了，“事实陈述”就是把“事实”说出来。而事实本身就【不】存在所谓的“对错”与“好坏”。所以，如果你去评价某个“事实陈述”的对错，是没有意义的，会显得很荒诞。
 
-　　比如——俺这个博客是2009年1月份开张的——这就是一个事实陈述。
+* **有“真假”**
 
-　　那么，什么才算“事实”捏？关键看它是不是具有【客观性】。不具有客观性的东西，不能算“事实”。
+虽然“事实陈述”没有“对错”与“好坏”的概念，但是有真假的概念。这个应该好理解。符合事实的，就是“真”；反之就是“假”。
 
+这里要提醒大伙儿注意了（尤其是搞理工科的同学）。很多人喜欢用“非真即假”、“非黑即白”的眼光看问题。在某些理工科领域，或许可以这么干。但是在社会学领域，最好不要这样。因为社会学领域的某些问题，会涉及到“灰色地带”，无法用“非黑即白”的方式判定。
 
-##### "事实陈述"有啥特征？
+### “事实”的可验证性
 
-◇无“对错”、无“好坏”
+这里的“可验证性”既包括“证实”，也包括“证伪”。
 
-　　前面说了，“事实陈述”就是把“事实”说出来。而事实本身就【不】存在所谓的“对错”与“好坏”。所以，如果你去评价某个“事实陈述”的对错，是没有意义的，会显得很荒诞。
+* **可验证，并且显然的**
 
-◇有“真假”
+有些事实属于很容易验证的，并且不易引发分歧。那么，针对这类事实的陈述，很容易就可以判断“真假”。比如：2008年奥运会在北京举行。
 
-　　虽然“事实陈述”没有“对错”与“好坏”的概念，但是有真假的概念。这个应该好理解。符合事实的，就是“真”；反之就是“假”。
+* **可验证，但不显然的**
 
-　　这里要提醒大伙儿注意了（尤其是搞理工科的同学）。很多人喜欢用“非真即假”、“非黑即白”的眼光看问题。在某些理工科领域，或许可以这么干。但是在社会学领域，最好不要这样。因为社会学领域的某些问题，会涉及到“灰色地带”，无法用“非黑即白”的方式判定。
+比如某人声称自己拥有多少总资产。这个陈述不是很显然，但如果非要查实，多花点力气还是有可能验证的。
 
+* **不可验证的**
 
-##### “事实”的可验证性
+还有一些事实，在现有的科技水平上，是无法验证的。
 
-　　这里的“可验证性”既包括“证实”，也包括“证伪”。
-
-◇可验证，并且显然的
-
-　　有些事实属于很容易验证的，并且不易引发分歧。那么，针对这类事实的陈述，很容易就可以判断“真假”。比如：2008年奥运会在北京举行。
-
-◇可验证，但不显然的
-
-　　比如某人声称自己拥有多少总资产。这个陈述不是很显然，但如果非要查实，多花点力气还是有可能验证的。
-
-◇不可验证的
-
-　　还有一些事实，在现有的科技水平上，是无法验证的。
-
-　　比如发生在久远年代的历史事件细节（除非发明时光机，或者当时正好有外星人到访并留下记录，否则无法验证）。
+比如发生在久远年代的历史事件细节（除非发明时光机，或者当时正好有外星人到访并留下记录，否则无法验证）。
 
 
-##### 哪些“事实陈述”值得争论？
+### 哪些“事实陈述”值得争论？
 
-　　刚才提到的三个类型：第一类，通常不需要争论；第三类，即使争论也不会有结果。
+刚才提到的三个类型：第一类，通常不需要争论；第三类，即使争论也不会有结果。
 
-　　所以，今后你如果要跟别人争执某个“事实陈述”的真假，先看看是不是属于第二类的。如果不是第二类的，还是省省吧。即使是第二类的事实陈述，也要看是否值得争论。只有性价比足够高的论题，才值得你花时间和精力去争论。
+所以，今后你如果要跟别人争执某个“事实陈述”的真假，先看看是不是属于第二类的。如果不是第二类的，还是省省吧。即使是第二类的事实陈述，也要看是否值得争论。只有性价比足够高的论题，才值得你花时间和精力去争论。
 
 
-##### 关于“事实陈述”的可信度
+### 关于“事实陈述”的可信度
 
-　　要判断某个“事实陈述”是否可信，办法之一是你亲自去验证。
+要判断某个“事实陈述”是否可信，办法之一是你亲自去验证。
 
-　　但是这么干，比较费时费力。而且有的事实陈述，你是不可能亲自去验证的（比如对历史事件的陈述）。
+但是这么干，比较费时费力。而且有的事实陈述，你是不可能亲自去验证的（比如对历史事件的陈述）。
 
-　　当你无法亲自验证的时候，就得换种方法——分析事实陈述的依据，由此来评估其可信度高不高。
+当你无法亲自验证的时候，就得换种方法——分析事实陈述的依据，由此来评估其可信度高不高。
 
-◇依据的分类
+* **依据的分类**
 
 　　事实陈述的依据，大致可以分为两类。
 
@@ -94,7 +88,7 @@ title: 批判性思维扫盲：学会区分“事实”与“观点”
 
 　　下面分别介绍两种依据的可信度问题。
 
-◇第一手资料的可信度
+* **第一手资料的可信度**
 
 　　有句老话叫做“耳听为虚，眼见为实”。很多人受到这句老话的误导，以为第一手资料就是可信的——其实未必。
 
@@ -112,7 +106,7 @@ title: 批判性思维扫盲：学会区分“事实”与“观点”
 
 　　假如某个人是个老骗子，那么此人陈述的第一手资料，可信度就要打个折扣。
 
-◇第N手资料的可信度
+* **第N手资料的可信度**
 
 　　评价第N手资料的可信度，需要同时考虑两方面：
 
@@ -121,16 +115,15 @@ title: 批判性思维扫盲：学会区分“事实”与“观点”
 　　其次，信息转手的次数越多，信息的衰减通常会越严重。
 
 
-##### 啥是观点陈述？
+### 啥是观点陈述？
 
 　　简单地说，就是陈述自己主观的一些东西。
 
 　　“观点”和“事实”最大的不同就在于，“观点”受主观影响的，而“事实”不受主观影响。
 
+### “观点陈述”的分类？
 
-##### “观点陈述”的分类？
-
-◇无需思考，得出的观点
+* **无需思考，得出的观点**
 
 　　这类观点陈述，比较常见的有：感官体验、价值观偏好。
 
@@ -144,7 +137,7 @@ title: 批判性思维扫盲：学会区分“事实”与“观点”
 
 　　喜欢喝XX饮料（价值观偏好）
 
-◇经过某种思考，得出的观点
+* **经过某种思考，得出的观点**
 
 　　思考的方式有很多种：
 
@@ -158,16 +151,15 @@ title: 批判性思维扫盲：学会区分“事实”与“观点”
 
 　　......
 
+### “观点陈述”有啥特征？
 
-##### “观点陈述”有啥特征？
-
-◇对于“感官体验”的观点
+* **对于“感官体验”的观点**
 
 　　完全不存在“真假”、“对错”、“好坏”。
 
 　　比如同一时间同一地点，有人会觉得温度高，有人觉得温度低。你不能说某个人是对的，另一人是错的。
 
-◇对于“价值观偏好”的观点
+* **对于“价值观偏好”的观点**
 
 　　如果“价值观偏好”纯属【私人领域】，就跟“感官体验”类似，也没有“真假”、“对错”、“好坏”之类的说法。
 
@@ -179,7 +171,7 @@ title: 批判性思维扫盲：学会区分“事实”与“观点”
 
 　　不过捏，能称得上“好的”价值观不多，能称得上“坏的”价值观也不多。大部分公共领域的价值观，都处于中间的灰色地带。这些价值观，可能在某些历史时期或某些文化中被赞同，而在另外的历史时期或另外的文化中，被排斥。比如“性取向的问题”就属于这种中间的灰色地带。
 
-◇对于“经过思考得出的观点”
+* **对于“经过思考得出的观点”**
 
 　　这类观点，也会有“对错”之分。因为思考的过程是有可能出现偏差和谬误的。
 
@@ -189,28 +181,28 @@ title: 批判性思维扫盲：学会区分“事实”与“观点”
 
 　　......（还有很多种谬误，恕不一一列举）
 
-　　关于思维方面的偏差和误区，有兴趣的话可以看看俺前几年的博文：《思维的误区：忽视沉默的大多数》《学会透过现象看本质，即使现象有时候挺诡异》
+　　关于思维方面的偏差和误区，有兴趣的话可以看看俺前几年的博文：[《思维的误区：忽视沉默的大多数》](https://program-think.blogspot.com/2010/07/silent-proof.html)[《学会透过现象看本质，即使现象有时候挺诡异》](https://program-think.blogspot.com/2009/02/from-surface-to-essence.html)
 
+### 哪些“观点陈述”值得质疑和争论？
 
-##### 哪些“观点陈述”值得质疑和争论？
+通过上述的分析，大伙儿应该比较清楚了：对于“感官体验”和“私人领域的价值观偏好”，质疑是没有意义的、争论是没有结果的。
 
-　　通过上述的分析，大伙儿应该比较清楚了：对于“感官体验”和“私人领域的价值观偏好”，质疑是没有意义的、争论是没有结果的。
+可惜的是，很多天朝的网民非常热衷于这类争论。比如：不同明星的追星族会互相争论、不同球队的球迷也常互相争论、甚至不同品牌手机的粉丝也会互相争论。
 
-　　可惜的是，很多天朝的网民非常热衷于这类争论。比如：不同明星的追星族会互相争论、不同球队的球迷也常互相争论、甚至不同品牌手机的粉丝也会互相争论。
+对于“经过思考得出的观点”，这方面是可以进行质疑和争论的。但要注意两点：
 
-　　对于“经过思考得出的观点”，这方面是可以进行质疑和争论的。但要注意两点：
+1. 要考虑性价比——不要花太多时间和精力去质疑和争论一些鸡毛蒜皮的细节
 
-　　1. 要考虑性价比——不要花太多时间和精力去质疑和争论一些鸡毛蒜皮的细节
+2. 反驳别人的观点要讲究境界
 
-　　2. 反驳别人的观点要讲究境界
+关于第二点提到的“境界”，大伙儿可以去读一下保罗.格雷汉姆的文章《How to Disagree》。考虑到某些同学不喜欢读洋文，附上如下的中文图解。
 
-　　关于第二点提到的“境界”，大伙儿可以去读一下保罗.格雷汉姆的文章《How to Disagree》。考虑到某些同学不喜欢读洋文，附上如下的中文图解。
-不见图 请翻墙
-
-![pic](https://i.loli.net/2018/05/15/5afa4db6757b3.png)
+<div style="text-align: center;">
+<img alt="2000px-Graham%252527s_Hierarchy_of_Disagreement%2Bb" src="https://i.loli.net/2018/07/14/5b496cd6cdd1b.png" style="margin: 0 auto;" />
+</div>
 
 ##### 结尾
 
-　　最后提醒一下：没看过《学会提问——批判性思维指南》的同学，【强烈建议】去看看。关于此书，俺曾经写过一篇书评，在这里。想下载电子版的同学，请翻墙看这里。
+最后提醒一下：没看过《学会提问——批判性思维指南》的同学，【强烈建议】去看看。关于此书，俺曾经写过一篇书评，在这里。想下载电子版的同学，请翻墙看[这里](https://program-think.blogspot.com/2010/10/book-review-asking-right-questions.html)。
 
 Source: [https://program-think.blogspot.com/2013/05/difference-between-fact-and-opinion.html](https://program-think.blogspot.com/2013/05/difference-between-fact-and-opinion.html)
