--- a/_posts/2018-7-13-隐瞒真相，对内失信于民，对外失信于全世界.md
+++ b/_posts/2018-7-13-隐瞒真相，对内失信于民，对外失信于全世界.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "《新世纪》：隐瞒真相，对内失信于民，对外失信于全世界"
-published: false
+published: true
 tags: [ 中国 , WTO , 政治]
 comments: true
 ---
