post '向以鲜：李庄的乡绅和乡绅们的遗憾 & 李庄乡绅的下场' added.

--- a/_posts/2018-4-12-My-test.md
+++ b/_posts/2018-4-12-My-test.md
@@ -10,3 +10,7 @@ published: false
 ![My helpful screenshot](http://caledonbrucetrail.ca/wp-content/uploads/2017/05/Kids-Hike-2017-05-20-EZ.jpg)
 
 ... you can [get the PDF]({{ "/assets/(美)亨利·黑兹利特.[一课经济学].pdf" | absolute_url }}) directly.
+
+<div style="text-align: center;">
+<img alt="4月27日北京游行" src="https://i.loli.net/2018/06/06/5b17894d49673.jpg" style="margin: 0 auto;" />
+</div>
