image show fix.

--- a/_posts/2019-5-3-余英时：试释五四新文化运动的历史作用.md
+++ b/_posts/2019-5-3-余英时：试释五四新文化运动的历史作用.md
@@ -36,7 +36,7 @@ comments: true
 ### （下）
 
 <div style="text-align: center;">
-<img alt="" src="images/20190503-2.jpeg" style="margin: 0 auto;" />
+<img alt="" src="/images/20190503-2.jpeg" style="margin: 0 auto;" />
 </div>
 
 “六四”以后，邓小平一度表示不谈”姓社“、“姓资”的消极态度，但是中共的整体统治究竟属于什么性质，无论对国内或国际而言，都是一个无法回避的问题。1992年江泽民在哈佛大学演讲，喊出“实现中华民族的伟大复兴”的口号。这可以看作是中共官方最早将意识形态和中国文化传统联系起来的一种表示。这一年正是邓小平“南巡”，大力推动经济开放的时期，可见他仍大权在握。江在意识形态上的新转向必曾取得他的认可，这是绝无可疑的。从字面上说，这一口号好像是对于邓所谓“中国特色的社会主义”提出的解读。但其实不然。邓所谓“中国特色”的本意原指中国的社会主义包涵了“让一部分人先富起来”的市场经济，与通常理解的“社会主义”大异其趣，然而这恰好是“中国特色”之所在。其中并没有回归中国文化传统的意味。现在时移世异，中共官方（不是江个人）便在“中国特色”四个字上大做起新文章来了。这里用“时移世异”一语是极其认真的。我必须进一步指出为了推拓民主运动，“六四”以前的知识人，无论在体制内或体制外，都同时抱着一种批判中国传统的意态。这是因为他们认为“党天下”的局面是从中国传统中逐渐演变出来的。当时震动海内外人心的电视纪录片——《河殇》——便是明证。在这一强大思潮之下，中共不可能以传统文化为号召。但“六四”之后情况完全改变了，“五四”精神已被彻底地镇压了下去。民主、法治、自由、人权等等普世价值都被视为是“西方的一套”，如果“搬到”中国来，便“非乱不可”。上面所引邓小平的话，这时已成为唯一能公开露面的政治语言。这是中共在意识形态的层面回归中国传统最好时机，一方面运用民族主义激情以重建政权的正当性，另一方面则以釜底抽薪方式切断民主在中国的生命线。当然，这里说的“回归中国传统”指的仅仅是政治语言，实质的回归不但不可能，而且中共也根本无此意愿。所以从江泽民到习近平，儒家的政治语言越来越占上风，而马克思主义的政治语言则已沦为附庸的地位。习在各种讲演和谈话中引用传统经典，层出不穷，以致官方必须编一部《习近平用典》（北京：人民出版社，2015）以供读者查考。“与之相呼应，新编《四书五经语录》一类古代经典选本也被大量刊行，摆上了千万党政干部案头。”（见上引梁治平，〈想象天下〉一文，页159）《四书五经语录》（北京：人民出版社，2013）是由“”中华文化促进会」主持编纂的，号称“党政干部诵读本”。这立即使我联想到六十年代国民党在台湾“复兴中华文化”的种种活动。蒋介石晚年对《大学》、《中庸》特别加以发挥而集成《科学的学庸》一书。国民党又建立了“中华文化复兴委员会”以推行这一运动，出版了《孔孟学报》和相关丛书（如陈立夫《四书道贯》之类）。国民党的目标十分明确，即抗拒当时胡适、雷震、殷海光等以《自由中国》为基地的民主运动。两相对照，今天中共“促进中华文化”和国民党在台湾“复兴中华文化”，走的是同一道路，所采用的具体方式也如出一辙，不过先后相距已超过半个世纪了。
