--- a/_posts/2018-10-13-既然把地动仪删了，麻烦把这些也改改.md
+++ b/_posts/2018-10-13-既然把地动仪删了，麻烦把这些也改改.md
@@ -2,6 +2,7 @@
 layout: post
 title: "既然把地动仪删了，麻烦把这些也改改"
 tags: [ 中国, 历史 , 夏商周断代工程 , 五千年文明史]
+excerpt_separator: <!--more-->
 comments: true
 ---
 
@@ -10,7 +11,7 @@ comments: true
 </div>
 
 我们从小在历史书上看到的“地动仪”其实是一个叫王振铎的当代人在上级有关精神指示下，在1951年根据古书描写的196个字，结合英国科学家的地震理论造出来的。古书上描绘的地动仪从来没有被发现过实物，那个仿造的东西也完全做不到古书上描述的功能。
-
+<!--more-->
 直到最近被历史课本删掉，很多人才刚刚知道这个东西是经不住推敲的。但恐怕很少有人还知道，我们在教科书上常见的“司南”，也就是这个东西：
 
 <div style="text-align: center;">
