--- a/_posts/2018-8-16-不敢相信的历史真相.md
+++ b/_posts/2018-8-16-不敢相信的历史真相.md
@@ -2,6 +2,7 @@
 layout: post
 title: "不敢相信的历史真相（附：1949年后被处决的242名国民党高级将领）"
 tags: [ 中国, 共产党 , 文化大革命 , 政治]
+excerpt_separator: <!--more-->
 comments: true
 ---
 ### 日本靖国神社统计有二战在华战亡人员数字：
@@ -19,6 +20,8 @@ comments: true
 > 38年晋察冀秋季反围剿39人，
 
 > 39年冀中冬季反扫荡27人，
+
+<!--more-->
 
 > 40年春反扫荡11人，
 
