--- a/_posts/2019-5-3-余英时：试释五四新文化运动的历史作用.md
+++ b/_posts/2019-5-3-余英时：试释五四新文化运动的历史作用.md
@@ -2,18 +2,21 @@
 layout: post
 title: "余英时：试释五四新文化运动的历史作用"
 tags: [ 中国, 五四运动, 新文化运动]
+excerpt_separator: <!--more-->
 comments: true
 ---
 ### （上）
+
+#### 缘起
+
+今年（2019）恰逢“五四”运动一百周岁，是一个非常难得的纪念之年。我们都知道，“五四”运动有狭义和广义的两种理解：狭义指1919年5月4日北京的学生运动；广义则指一场新思想的运动，当时称之为“新思潮”或“新文化”。它必须上溯到1917年的新文学运动（白话取代了文言）和《新青年》杂志所倡导的“赛先生”（科学）和“德先生”（民主）。所以狭义的“五四”其实只是“新思潮”或“新文化”的一种行动表现，因而必须包括在广义“五四”之内。这一点必须先交代清楚，以免引起不必要的误会。
+
+<!--more-->
 
 <div style="text-align: center;">
 <img alt="" src="/images/20190503-1.jpeg" style="margin: 0 auto;" />
 <p>图／林崇汉</p>
 </div>
-
-#### 缘起
-
-今年（2019）恰逢“五四”运动一百周岁，是一个非常难得的纪念之年。我们都知道，“五四”运动有狭义和广义的两种理解：狭义指1919年5月4日北京的学生运动；广义则指一场新思想的运动，当时称之为“新思潮”或“新文化”。它必须上溯到1917年的新文学运动（白话取代了文言）和《新青年》杂志所倡导的“赛先生”（科学）和“德先生”（民主）。所以狭义的“五四”其实只是“新思潮”或“新文化”的一种行动表现，因而必须包括在广义“五四”之内。这一点必须先交代清楚，以免引起不必要的误会。
 
 “五四”新文化是我一向重视的一件历史大事，曾先后多次为文讨论。这次百年纪念更激起我对于“五四”的种种反思，其中一部分已见于我和唐小兵教授的访谈录中。但访谈结束后，我感觉还有不少重要的想法当时没有机会说出来。（因为访谈只进行了一小时。）现在我想将其中一些想法组织起来，对“五四”在现代中国的历史作用，做一次客观的整体论断。
 
